# atsuki

./: .gitignore  CMakeLists.txt  main.cpp  render_pass.cpp  render_pass.h  shader_utils.cpp  shader_utils.h
shaders/: ascii_render.frag  display.frag  dog.frag  downscale.frag  edge_detect.frag  fullscreen_quad.vert  histogram.frag  luminance.frag  sobel_deprecated.frag
